--- a/templates/index.html
+++ b/templates/index.html
@@ -31,9 +31,9 @@
 					<li>
 						<a href="{{ url_for('map') }}">map</a>
 					</li>
-					<li>
+					<!-- <li>
 						<a href="{{ url_for('about') }}">about</a>
-					</li>
+					</li> -->
 				</ul>
 			</nav>
 		</div>
@@ -53,7 +53,7 @@
 	
 							<div class="form-group">
 								<label for="Did_Police_Officer_Attend">Did Police Officer Attend Scene of Accident</label>
-								<input type="text" class="form-control" name="Did_Police_Officer_Attend" id="Did_Police_Officer_Attend" value="1" required>
+								<input type="text" class="form-control" name="Did_Police_Officer_Attend" id="Did_Police_Officer_Attend" required>
 							</div>
 	
 							<label for="Did_Police_Officer_Attend">Latitude and Longitude</label>
@@ -76,7 +76,7 @@
 		
 						<div class="form-group">
 							<label for="Age_of_Driver">Age of Driver</label>
-							<input type="text" class="form-control" name="Age_of_Driver" id="age_of_driver" value="25" required>
+							<input type="text" class="form-control" name="Age_of_Driver" id="age_of_driver" required>
 						</div>
 		
 						<div class="form-group">
@@ -101,12 +101,12 @@
 		
 						<div class="form-group">
 							<label for="Age_of_Vehicle">Age of Vehicle</label>
-							<input type="text" class="form-control" name="Age_of_Vehicle" id="age_of_vehicle" value="5" required>
+							<input type="text" class="form-control" name="Age_of_Vehicle" id="age_of_vehicle"  required>
 						</div>
 		
 						<div class="form-group">
 							<label for="Engine_Capacity_CC">Engine Capacity in CC</label>
-							<input type="text" class="form-control" name="Engine_Capacity_CC" id="engine_cc" value="125" required>
+							<input type="text" class="form-control" name="Engine_Capacity_CC" id="engine_cc" required>
 						</div>
 		
 						<div class="form-group">
@@ -174,7 +174,7 @@
 		
 						<div class="form-group">
 							<label for="Speed_limit">Speed Limit</label>
-							<input type="text" class="form-control" type="text" name="Speed_limit" id="speedl" value="80" required>
+							<input type="text" class="form-control" type="text" name="Speed_limit" id="speedl" required>
 						</div>
 		
 						<button type="button" class="btn btn-success btn-block" id="submitBtn">Predict</button>
